// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic plan 1`] = `
{
  "ops": {
    "1": [
      "data",
      42,
    ],
    "10": {
      "ops": {
        "12": {
          "ops": {
            "14": [
              "apply",
              [
                0,
                "getUserById",
              ],
              [
                13,
              ],
            ],
            "15": [
              "expr",
              [
                14,
              ],
            ],
          },
          "params": [
            13,
          ],
        },
        "16": [
          "map",
          [
            11,
            "friends",
          ],
          12,
        ],
        "17": [
          "get",
          [
            11,
            "id",
          ],
        ],
        "18": [
          "expr",
          {
            "info": {
              "friends": [
                16,
              ],
              "id": [
                17,
              ],
            },
          },
        ],
      },
      "params": [
        11,
      ],
    },
    "19": [
      "map",
      [
        9,
      ],
      10,
    ],
    "2": [
      "apply",
      [
        0,
        "getUserById",
      ],
      [
        1,
      ],
    ],
    "20": [
      "get",
      [
        9,
        "0",
      ],
    ],
    "21": [
      "get",
      [
        9,
        "0",
        "id",
      ],
    ],
    "3": [
      "apply",
      [
        0,
        "getUsers",
      ],
      [],
    ],
    "4": {
      "ops": {
        "6": [
          "get",
          [
            5,
            "id",
          ],
        ],
        "7": [
          "get",
          [
            5,
            "friends",
          ],
        ],
        "8": [
          "expr",
          {
            "friends": [
              7,
            ],
            "id": [
              6,
            ],
          },
        ],
      },
      "params": [
        5,
      ],
    },
    "9": [
      "map",
      [
        3,
      ],
      4,
    ],
  },
  "outputs": [
    2,
    20,
    21,
    19,
  ],
  "params": [
    0,
  ],
}
`;

exports[`kitchen sink test 1`] = `
{
  "ops": {
    "1": [
      "data",
      "42",
    ],
    "14": [
      "map",
      [
        2,
      ],
      3,
    ],
    "15": [
      "data",
      100,
    ],
    "16": [
      "apply",
      [
        0,
        "getThing",
      ],
      [
        15,
      ],
    ],
    "17": [
      "get",
      [
        16,
        "foo",
        "bar",
      ],
    ],
    "18": [
      "data",
      {
        "thing": [
          "@ref",
          17,
        ],
        "value": 100,
        "when": 1762035193626,
      },
    ],
    "19": [
      "apply",
      [
        0,
        "doSomething",
      ],
      [
        18,
      ],
    ],
    "2": [
      "apply",
      [
        0,
        "getUserById",
      ],
      [
        1,
      ],
    ],
    "20": [
      "apply",
      [
        0,
        "doSomething",
      ],
      [
        18,
      ],
    ],
    "3": {
      "ops": {
        "10": [
          "get",
          [
            4,
            "id",
          ],
        ],
        "11": [
          "apply",
          [
            0,
            "getBestFriendOf",
          ],
          [
            10,
          ],
        ],
        "12": [
          "get",
          [
            4,
            "id",
          ],
        ],
        "13": [
          "expr",
          {
            "bestFriend": [
              11,
            ],
            "bestFriend2": [
              [
                0,
                [
                  11,
                ],
              ],
            ],
            "big": [
              "bigint",
              "100",
            ],
            "friends": [
              9,
            ],
            "id": [
              12,
            ],
            "now": [
              "date",
              1762035193626,
            ],
            "numbers": [
              [
                1,
                2,
                3,
              ],
            ],
          },
        ],
        "5": {
          "ops": {
            "7": [
              "apply",
              [
                0,
                "getUserById",
              ],
              [
                6,
              ],
            ],
            "8": [
              "expr",
              [
                7,
              ],
            ],
          },
          "params": [
            6,
          ],
        },
        "9": [
          "map",
          [
            4,
            "friends",
          ],
          5,
        ],
      },
      "params": [
        4,
      ],
    },
  },
  "outputs": [],
  "params": [
    0,
  ],
}
`;
